src/test/ui/rfc-2632-const-trait-impl/issue-88155.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-88155.rs:9:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
